--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="container-fluid top-banner">
     <div class="row p-5">
-      <div class="col p-3 m-3">
+      <div class="col-sm p-3 m-3">
         <h1>Welcome to</h1>
         <h1><span>Md. Junaidul Islam</span> World</h1>
         <h3>Love to explore and learn new techs</h3>
@@ -38,7 +38,7 @@
           role="button">Hire Me</a>
       </div>
 
-      <div class="col p-3 m-3">
+      <div class="col-sm p-3 m-3">
         <img class="img-fluid" src="images/junaid.png" alt="junaid.png" />
       </div>
     </div>
@@ -46,10 +46,10 @@
 
   <div class="container-fluid middle-banner">
     <div class="row p-5 experience-area">
-      <div class="col p-3 m-3">
+      <div class="col-sm p-3 m-3">
         <img class="img-fluid" src="images/junaid2.png" alt="junaid2.png" />
       </div>
-      <div class="col p-3 m-3">
+      <div class="col-sm p-3 m-3">
         <h1>Goal</h1>
         <h3>Become a Software Developer</h3>
         <p>
@@ -111,10 +111,10 @@
 </body>
 <footer class="container-fluid bg-warning text-center pb-1">
   <div class="row mt-5 p-3">
-    <div class="col">
+    <div class="col-sm">
       <p>Get Connected with me on social networks:</p>
     </div>
-    <div class="col">
+    <div class="col-sm">
       <a target="_blank" href="https://www.facebook.com/junaaid96/"><i class="fa-brands fa-facebook-square text-black px-3"></i></a>
     <a target="_blank" href="https://twitter.com/junaaid96"><i class="fa-brands fa-twitter-square text-black px-3"></i></a>
     <a target="_blank" href="https://www.linkedin.com/in/md-junaidul-islam/"><i class="fa-brands fa-linkedin text-black px-3"></i></a>
