--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <div class="container-fluid">
     <div class="row p-5">
-      <div class="col border border-warning p-5">
+      <div class="col border border-warning p-5 m-3">
         <h2>Full Stack Developer</h2>
         <h3>2022-Present | Senior Developer</h3>
         <p>
@@ -93,7 +93,7 @@
           a cupiditate suscipit. Dolore, aspernatur!
         </p>
       </div>
-      <div class="col border border-warning p-5">
+      <div class="col border border-warning p-5 m-3">
         <h2>Web Developer</h2>
         <h3>2018-2020 | Junior Developer</h3>
         <p>
